Fix form overflow on mobile screens

--- a/woocommerce/checkout.css
+++ b/woocommerce/checkout.css
@@ -19,7 +19,8 @@
   margin-top:-290px
 }
 form.checkout, #order_review_heading {
-  margin-top:-30px
+  margin-top:-30px;
+  width:100%; /* only active on small screens, otherwise media filter*/
 }
 
 /*
